@@ -1,3 +1,5 @@
+	* Make sshpass pass along tty window resize events to the inner tty
+
 Version 1.00
 	* Make sure that authentication failures are terminated early.
 	* Better detect when the child has exited.
